syntax = "proto3";
package ecsstream;

option go_package = "protobuf/go-ecs-stream";

message ECSEvent {
  string eventType = 1;
  string componentId = 2;
  string entityId = 3;
  bytes value = 4;
}

// The Stream Service definition.
service ECSStreamService {
  // Requests the latest ECS state.
  rpc SubscribeToStreamLatest (ECSStreamBlockBundleRequest) returns (stream ECSStreamBlockBundleReply) {}
}

message ECSStreamBlockBundleRequest {
  string worldAddress = 1;
  bool blockNumber = 2;
  bool blockHash = 3;
  bool blockTimestamp = 4;
  bool transactionsConfirmed = 5;
  bool ecsEvents = 6; 
}

message ECSStreamBlockBundleReply {
  uint32 blockNumber = 1;
  string blockHash = 2;
  uint32 blockTimestamp = 3;
  repeated string transactionsConfirmed = 4;
  repeated ECSEvent ecsEvents = 5;
}
